# tinker

./: LICENSE  README.md  package-lock.json
backend/: pyproject.toml
backend/supabase/: schema.sql
backend/tests/: test_apply_suggestion.py  test_graph.py  test_llm.py  test_lookup.py  test_physics.py  test_validation.py
backend/tinker/: __init__.py  domain.py  graph.py  llm.py  main.py  models.py  run_store.py  state.py  supabase_run_store.py
backend/tinker/db/: lookup.py
backend/tinker/domains/synth_midi/: adapter.py
backend/tinker/domains/synth_midi/db/: audio.json  controls.json  io.json  mcus.json  regulators.json
backend/tinker/domains/synth_midi/physics/: audio.py  latency.py  power.py  validation.py
backend/tinker/domains/synth_midi/prompts/: alternative_suggestions.py  classification.py  component_id.py  spatial_estimation.py  tradeoff_analysis.py
backend/tinker/nodes/: alternative_suggester.py  component_lookup.py  physics_validation.py  report_generator.py  tradeoff_analyzer.py  vision_analysis.py
docs/: adding-a-domain.md  architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/lib/: api.js
