[tool.poetry]
name = "tinker-backend"
version = "0.1.0"
description = "tinker: reverse-engineering synths and MIDI controllers from photos"
authors = ["tinker"]
packages = [{ include = "tinker" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pydantic = "^2.11.0"
python-multipart = "^0.0.20"
langgraph = "^0.6.0"
numpy = "^2.2.0"
anthropic = "^0.63.0"
supabase = "^2.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
